src/kerneloverhead_cl20/tmp
/home/saoni/hsaBench/src/kerneloverhead/main.c: In function ‘main’:
/home/saoni/hsaBench/src/kerneloverhead/main.c:53:7: warning: ‘clCreateCommandQueue’ is deprecated (declared at /home/saoni/hsaBench/include/CL/cl.h:1358) [-Wdeprecated-declarations]
       queue = clCreateCommandQueue(context, device, NULL, &err);
       ^
/home/saoni/hsaBench/src/kerneloverhead/main.c:53:7: warning: passing argument 3 of ‘clCreateCommandQueue’ makes integer from pointer without a cast [enabled by default]
In file included from /home/saoni/hsaBench/src/kerneloverhead/main.c:10:0:
/home/saoni/hsaBench/include/CL/cl.h:1358:1: note: expected ‘cl_command_queue_properties’ but argument is of type ‘void *’
 clCreateCommandQueue(cl_context                     /* context */,
 ^
/home/saoni/hsaBench/src/kerneloverhead/main.c:56:7: warning: passing argument 3 of ‘clCreateProgramWithSource’ from incompatible pointer type [enabled by default]
       program = clCreateProgramWithSource(context, 1, &source_str, &source_length, &err);
       ^
In file included from /home/saoni/hsaBench/src/kerneloverhead/main.c:10:0:
/home/saoni/hsaBench/include/CL/cl.h:831:1: note: expected ‘const char **’ but argument is of type ‘char **’
 clCreateProgramWithSource(cl_context        /* context */,
 ^
/home/saoni/hsaBench/src/kerneloverhead/main.c:118:22: error: ‘context’ undeclared (first use in this function)
     clReleaseContext(context);
                      ^
/home/saoni/hsaBench/src/kerneloverhead/main.c:118:22: note: each undeclared identifier is reported only once for each function it appears in
/home/saoni/hsaBench/src/kerneloverhead/main.c:119:27: error: ‘queue’ undeclared (first use in this function)
     clReleaseCommandQueue(queue);
                           ^
/home/saoni/hsaBench/src/kerneloverhead/main.c:33:12: warning: ignoring return value of ‘fread’, declared with attribute warn_unused_result [-Wunused-result]
       fread(source_str, 1, MAX_SOURCE_SIZE, cl_code);
            ^
make[2]: *** [CMakeFiles/kernellaunchtime.dir/main.c.o] Error 1
make[1]: *** [CMakeFiles/kernellaunchtime.dir/all] Error 2
make: *** [all] Error 2
